# ros-pacman

./: .gitignore  .scoreBoard  CHANGELOG.rst  CMakeLists.txt  README  README.md  installPacmanRequirements.sh  package.xml  patches.conf  ros-pacman.kdev4  startPacmanController.sh  startPacmanServer.sh  tracks.yaml
include/pacman/: Ghosts.h  Pacman.h  Utilities.h  Utils.h  glwidget.h  listenmsgthread.h  mainwindow.h  maps.h  window.h
msg/: actions.msg  bonusPos.msg  cookiesPos.msg  game.msg  ghostsPos.msg  pacmanPos.msg  performance.msg
resources/: resources.qrc
resources/layouts/: ALIANZA.lay  GHOST.lay  mediumCRAZY.lay  mediumPACMAN.lay  mediumScaryMaze.lay  originalClassic.lay  originalEMA.lay  powerClassic.lay
src/: Ghosts.cpp  Pacman.cpp  Utilities.cpp  Utils.cpp  glwidget.cpp  listenmsgthread.cpp  main.cpp  mainwindow.cpp  maps.cpp  pacman_controller.cpp  pacman_controller2.cpp  pacman_controller_hw.cpp  pacman_controller_phone.cpp  window.cpp
srv/: mapService.srv
