<?xml version="1.0"?>
<package format="2">
  <name>pacman</name>
  <version>0.0.1</version>
  <description>The pacman package is a simulator of the classic Pac-Man game that provides access to other nodes to the Pac-Man environment through ROS topics and services</description>
  <maintainer email="quintero.carlos@uniandes.edu.co">Carlos Quintero</maintainer>
  <maintainer email="erojas@unimagdalena.edu.co">Eyberth Rojas</maintainer>  
  <maintainer email="ospena@bancolombia.com.co">Oswaldo Peña</maintainer>
  <maintainer email="fabianeperez@usantotomas.edu.co">Fabián Pérez</maintainer>
  <maintainer email="armandomateus@usantotomas.edu.co">Armando Mateus</maintainer>
  <maintainer email="carorojas@bancolombia.com.co">Saith Rodríguez</maintainer>
  <license>LGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>OpenGL</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>roslib</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <export>

  </export>
</package>
